--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-client": "^2.6.8",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.20",
     "apollo-upload-client": "^13.0.0",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
@@ -24,7 +25,8 @@
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
